/*
 * The MIT License (MIT)
 *
 * Copyright (c) 2015 Andy Chong Chin Shin
 *
 * Permission is hereby granted, free of charge, to any person obtaining a copy
 * of this software and associated documentation files (the "Software"), to deal
 * in the Software without restriction, including without limitation the rights
 * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
 * copies of the Software, and to permit persons to whom the Software is
 * furnished to do so, subject to the following conditions:
 *
 * The above copyright notice and this permission notice shall be included in all
 * copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 * SOFTWARE.
 *
 */

syntax = "proto3";

option java_package = "com.sqatntu.stylechecker.proto";

package stylechecker;

import "error.proto";

service StyleCheck {
  rpc Check (StyleCheckRequest) returns (StyleCheckReply) {}
}

message StyleCheckRequest {
  string sourceCode = 1;
  string configuration = 2;
}

message StyleCheckReply {
  repeated StyleCheckReport reports = 1;
  Error error = 2;
  MetricReport metricReport = 3;
}

message StyleCheckReport {
  uint32 lineNumber = 1;
  uint32 columnNumber = 2;
  string reportMessage = 3;
  string suggestion = 4;
}

message MetricReport {
  PercentageData overallData = 1;
  PercentageData analysabilityData = 2;
  PercentageData testabilityData = 3;

  MetricData lineOfCode = 51;
  MetricData depthOfConditionalNesting = 52;
  MetricData lengthOfIdentifier = 53;
  MetricData numberOfAttribute = 54;
  MetricData numberOfMethod = 55;
}

message PercentageData {
  float percentage = 1;
  string descriptionText = 2;
}

message MetricData {
  uint32 value = 1;
  uint32 benchmark = 2;
  float score = 3;
}